# RoboRTS-Firmware

./: .gitignore  .mxproject  ARMCC.cmake  CMakeLists.txt  Makefile  STM32F407IG.jflash  Todo.md  build-debug.bat  build.bat  convert_to_cmake.py  jscope.jscope  license.txt  readme.md  rm_infantry.ioc  style.bat  user manual.xlsx  yes  yes.pub
Doc/: read_me.txt  rm_infantry.txt  shootdesign.md
Doc/ch/: readme.md
Doc/en/: readme.md
Doc/protocol/: readme.md
Doc/protocol/ch/: readme.md
Doc/tutorial/: readme.md
Doc/tutorial/ch/: readme.md
Inc/: FreeRTOSConfig.h  bin.h  bsp_driver_sd.h  can.h  fatfs.h  ffconf.h  gpio.h  main.h  rtc.h  sdio.h  spi.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h  usart.h
MDK-ARM/: infantry.uvprojx  rm_infantry.uvprojx  standard.uvprojx  startup_stm32f427xx.s
MDK-ARM/RTE/_Flash/: RTE_Components.h
MDK-ARM/RTE/_Target_1/: RTE_Components.h
MDK-ARM/RTE/_rm_infantry/: RTE_Components.h
MDK-ARM/app/: '  chassis_task.c  chassis_task.h  comm_task.c  comm_task.h  cpu_utils.c  cpu_utils.h  detect_task.c  detect_task.h  gimbal_task.c  gimbal_task.h  imu_task.c  imu_task.h  info_get_task.c  info_get_task.h  info_interactive.c  info_interactive.h  modeswitch_task.c  modeswitch_task.h  record_task.c  record_task.h  shoot_task.c  shoot_task.h  sys_config.h
MDK-ARM/bsp/: bsp_can.c  bsp_can.h  bsp_flash.c  bsp_flash.h  bsp_imu.c  bsp_imu.h  bsp_io.c  bsp_io.h  bsp_led.h  bsp_uart.c  bsp_uart.h  ist8310_reg.h  led.h  mpu6500_reg.h
MDK-ARM/imu/: dmp_motion_driver.c
MDK-ARM/other_lib/: data_fifo.c  data_fifo.h
MDK-ARM/rm_infantry/: debug.jscope  rm_infantry.hex
MDK-ARM/rmlib/: calibrate.c  calibrate.h  communicate.c  communicate.h  infantry_info.c  infantry_info.h  judgement_info.c  judgement_info.h  kalman_filter.c  kalman_filter.h  keyboard.c  keyboard.h  pid.c  pid.h  protocol.c  protocol.h  ramp.c  ramp.h  remote_ctrl.c  remote_ctrl.h
Src/: bsp_driver_sd.c  can.c  dma.c  fatfs.c  freertos.c  gpio.c  main.c  rtc.c  sdio.c  spi.c  stm32f4xx_hal_timebase_TIM.c  stm32f4xx_it.c  tim.c  usart.c
application/: app_manage.c  app_manage.h  appcfg.h  chassis_task.c  chassis_task.h  communicate.c  communicate.h  event.h  gimbal_task.c  gimbal_task.h  infantry_cmd.c  infantry_cmd.h  init.c  init.h  offline_check.c  offline_check.h  offline_service.c  offline_service.h  param.c  param.h  referee_system.c  referee_system.h  sensor_task.c  sensor_task.h  shell.c  shell.h  shoot_task.c  shoot_task.h  timer_task.c  timer_task.h
application/chassis/: chassis_app.c  chassis_app.h  chassis_cmd.c  chassis_cmd.h  chassis_task.c  chassis_task.h
application/gimbal/: gimbal_app.c  gimbal_app.h  gimbal_cmd.c  gimbal_cmd.h  gimbal_task.c  gimbal_task.h  shoot_task.c  shoot_task.h
application/protocol/: protocol.c  protocol.h  protocol_cfg.h  protocol_common.c  protocol_common.h  protocol_interface.c  protocol_interface.h  protocol_log.h  protocol_transmit.c  protocol_transmit.h
bsp/boards/: ahrs.h  board.c  board.h  drv_bmi088.c  drv_can.c  drv_can.h  drv_dr16.c  drv_dr16.h  drv_flash.c  drv_flash.h  drv_imu.c  drv_imu.h  drv_io.c  drv_io.h  drv_uart.c  drv_uart.h  ist8310_reg.h  mpu6500_reg.h  stm32f4xx_it.c  usbd_cdc_if.c  usbd_cdc_if.h
bsp/cubemx/: .mxproject  tpye_c.ioc
bsp/cubemx/Core/Inc/: FreeRTOSConfig.h  can.h  gpio.h  i2c.h  main.h  spi.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h  usart.h
bsp/cubemx/Core/Src/: can.c  dma.c  freertos.c  gpio.c  i2c.c  main.c  spi.c  startup_stm32f427xx.s  stm32f4xx_hal_timebase_TIM.c  stm32f4xx_it.c  tim.c  usart.c
bsp/cubemx/MDK-ARM/: tpye_c.uvprojx
cmake_template/: CMakeLists.txt
components/algorithm/: ahrs.h  madgwick_ahrs.c  mahony_ahrs.c  mecanum.c  mecanum.h  my_math.h  pid.c  pid.h  ramp.c  ramp.h
components/bmi088/: AHRS_middleware.c  AHRS_middleware.h  BMI088Middleware.c  BMI088Middleware.h  BMI088driver.c  BMI088driver.h  ahrs_lib.h  libm_error.c  struct_typedef.h  user_lib.c  user_lib.h
components/bmi088/Include/: arm_common_tables.h  arm_const_structs.h  arm_math.h  core_sc000.h  core_sc300.h
components/cli/: cli_history.c  cli_history.h  cli_interpreter.c  cli_interpreter.h  cli_process.c  cli_process.h  readme.md
components/controller/: controller.c  controller.h  pid_controller.c  pid_controller.h
components/devices/: dbus.c  dbus.h  detect.c  detect.h  device.c  device.h  motor.c  motor.h  single_gyro.c  single_gyro.h
components/easyflash/inc/: easyflash.h  ef_cfg.h  ef_def.h
components/easyflash/port/: ef_port.c
components/easyflash/src/: easyflash.c  ef_env.c  ef_iap.c  ef_log.c  ef_utils.c
components/event_mgr/: event_mgr.c  event_mgr.h  memory_mgr.c  memory_mgr.h
components/log/: log.c  log.h  log_config.h
components/modules/: chassis.c  chassis.h  gimbal.c  gimbal.h  shoot.c  shoot.h  single_gyro.c  single_gyro.h
components/object/: errno.h  object.c  object.h  sys.h
components/protocol/: protocol.c  protocol.h  protocol_cfg.h  protocol_common.c  protocol_common.h  protocol_interface.c  protocol_interface.h  protocol_log.h  protocol_transmit.c  protocol_transmit.h
components/referee/: referee_system.c  referee_system.h
components/soft_timer/: os_timer.c  os_timer.h  period.c  period.h  soft_timer.c  soft_timer.h
components/support/: MF_CRC.h  errno.h  fifo.c  fifo.h  linux_list.h  mem_mang.h  mem_mang4.c  mf_crc.c  sys.h
components/systemview/: Global.h  SEGGER.h  SEGGER_RTT.c  SEGGER_RTT.h  SEGGER_RTT_Conf.h  SEGGER_SYSVIEW.c  SEGGER_SYSVIEW.h  SEGGER_SYSVIEW_Conf.h  SEGGER_SYSVIEW_ConfDefaults.h  SEGGER_SYSVIEW_Config_FreeRTOS.c  SEGGER_SYSVIEW_FreeRTOS.c  SEGGER_SYSVIEW_FreeRTOS.h  SEGGER_SYSVIEW_Int.h
config/: ROBOT.ioc  ROBOT.txt  ulog_config.h
doc/ch/: protocol.md
doc/en/: protocol.md  readme.md
test/: log_test.c  log_test.h  test.c  test.h  test_module.c  test_module.h
tools/: astyle.cmd  list.bat
tools/CMake/: GNU-ARM-Toolchain.cmake
tools/linker/: STM32F407IGHx_FLASH.ld
utilities/: period.c  period.h  soft_timer.c  soft_timer.h
utilities/ulog/: ulog.c  ulog.h  ulog_console.c  ulog_def.h
(+6 files in other folders)
